--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,6 +42,8 @@ endif()
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
     ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
+
 
 # --- Build target ------------------------------------------------------------
 add_library(uca SHARED ${uca_SRCS})
