Make the properties complete and build even better test app

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
 
+add_definitions("--std=c99 -Wall")
+
 include_directories(${CMAKE_SOURCE_DIR}/src)
+
 add_executable(test test.c)
 
 target_link_libraries(test uca)
