Add preliminary "support" for Photron cameras

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -2,4 +2,5 @@
 #cmakedefine HAVE_ME4_FRAMEGRABBER
 #cmakedefine HAVE_PCO_EDGE
 #cmakedefine HAVE_PHOTON_FOCUS
+#cmakedefine HAVE_PHOTRON_FASTCAM
 #cmakedefine HAVE_IPE_CAMERA
