--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,10 +3,12 @@ cmake_minimum_required(VERSION 2.8)
 # --- Set sources -------------------------------------------------------------
 set(uca_SRCS
     uca.c
+    uca-cam.c
     )
 
 set(uca_HDRS
     uca.h
+    uca-cam.h
     )
 
 set(uca_LIBS "")
@@ -21,32 +23,45 @@ find_package(PCO)
 find_package(FgLib5)
 find_package(ClSerMe4)
 
-# --- Add sources if camera access sources are available ----------------------
-if(PCO_FOUND AND CLSERME4_FOUND AND FGLIB5_FOUND)
+# --- Add sources if camera/framegrabber access sources are available ---------
+if(PCO_FOUND)
     set(HAVE_PCO_EDGE TRUE)
 
     set(uca_SRCS 
         ${uca_SRCS}
-        cameras/uca_pco.c
+        cameras/pco.c
+        )
+
+    set(uca_LIBS 
+        ${uca_LIBS}
+        ${PCO_LIBRARIES}
+        )
+
+    include_directories(
+        ${CMAKE_CURRENT_SOURCE_DIR}
+        ${PCO_INCLUDE_DIRS}
+        )
+endif()
+
+if(CLSERME4_FOUND AND FGLIB5_FOUND)
+    set(HAVE_ME4 TRUE)
+
+    set(uca_SRCS 
+        ${uca_SRCS}
+        grabbers/me4.c
         )
 
     set(uca_LIBS 
         ${uca_LIBS}
         ${CLSERME4_LIBRARY}
         ${FGLIB5_LIBRARY}
-        ${PCO_LIBRARIES}
         )
 
     include_directories(
         ${CMAKE_CURRENT_SOURCE_DIR}
         ${CLSERME4_INCLUDE_DIR}
         ${FGLIB5_INCLUDE_DIR}
-        ${PCO_INCLUDE_DIRS}
         )
-endif()
-
-if(CLSERME4_FOUND AND FGLIB5_FOUND)
-    set(HAVE_ME4_FRAMEGRABBER TRUE)
 endif()
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
