Add grab example

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,8 @@ add_definitions("--std=c99 -Wall")
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
-add_executable(test test.c)
+add_executable(enum enum.c)
+add_executable(grab grab.c)
 
-target_link_libraries(test uca)
+target_link_libraries(enum uca)
+target_link_libraries(grab uca)
