--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
 
+set(UCA_VERSION_MAJOR "0")
+set(UCA_VERSION_MINOR "2")
+set(UCA_VERSION_PATCH "0")
+
 # --- Set sources -------------------------------------------------------------
 set(uca_SRCS
     uca.c
@@ -105,9 +109,9 @@ set(CPACK_SET_DESTDIR ON)
 
 set(CPACK_PACKAGE_CONTACT "Matthias Vogelgesang")
 set(CPACK_PACKAGE_VENDOR "Karlsruhe Institute of Technology/IPE")
-set(CPACK_PACKAGE_VERSION_MAJOR "0")
-set(CPACK_PACKAGE_VERSION_MINOR "1")
-set(CPACK_PACKAGE_VERSION_PATCH "0")
+set(CPACK_PACKAGE_VERSION_MAJOR ${UCA_VERSION_MAJOR})
+set(CPACK_PACKAGE_VERSION_MINOR ${UCA_VERSION_MINOR})
+set(CPACK_PACKAGE_VERSION_PATCH ${UCA_VERSION_PATCH})
 set(VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
 
 set(CPACK_GENERATOR "DEB;RPM;")
