Fix grabber bug and add Gtk control application

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,10 +2,26 @@ cmake_minimum_required(VERSION 2.8)
 
 add_definitions("--std=c99 -Wall")
 
+# --- Find packages and libraries ---------------------------------------------
+find_package(PkgConfig)
+
+pkg_check_modules(GTK2 gtk+-2.0)
+
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
+# --- Build targets -----------------------------------------------------------
 add_executable(enum enum.c)
 add_executable(grab grab.c)
 
 target_link_libraries(enum uca)
 target_link_libraries(grab uca)
+
+if (GTK2_FOUND)
+    include_directories(${GTK2_INCLUDE_DIRS})
+    add_executable(control control.c)
+    target_link_libraries(control
+        uca
+        ${GTK2_LIBRARIES}
+        )
+endif()
+
