Add publishing script and propagate version from top directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 project(uca)
 
+set(UCA_VERSION_MAJOR "0")
+set(UCA_VERSION_MINOR "3")
+set(UCA_VERSION_PATCH "0")
+
 add_subdirectory(src)
 add_subdirectory(doc)
 add_subdirectory(test)
