--- a/doc/publish.sh.in
+++ b/doc/publish.sh.in
@@ -5,4 +5,4 @@ read -e USER
 echo -n "host (:~/public_html is appended): "
 read -e HOST
 
-scp -r html/ $USER@$HOST:~/public_html/libuca-${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}
+scp -vr html/ $USER@$HOST:~/public_html/libuca-${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}
