Use GtkBuilder.connect_signals and optimize data conversion

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,8 +10,7 @@ pkg_check_modules(GTHREAD2 gthread-2.0)
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/control.glade
-    DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/control.glade ${CMAKE_CURRENT_BINARY_DIR})
 
 # --- Build targets -----------------------------------------------------------
 add_executable(enum enum.c)
