Generate RPM and DEB packages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(TARNAME "libuca")
 set(UCA_VERSION_MAJOR "0")
 set(UCA_VERSION_MINOR "4")
 set(UCA_VERSION_PATCH "0")
+set(UCA_DESCRIPTION "Unified Camera Access")
 
 set(UCA_VERSION_STRING "${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}")
 set(UCA_API_VERSION "0.1.0")
@@ -16,6 +17,18 @@ set(PACKAGE_NAME "${TARNAME}")
 set(PACKAGE_TARNAME "${TARNAME}")
 set(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")
 set(PACKAGE_BUGREPORT "http://ufo.kit.edu/ufo/newticket")
+
+set(CPACK_GENERATOR "DEB;RPM;")
+set(CPACK_DEBIAN_PACKAGE_NAME "libuca")
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Matthias Vogelgesang <matthias.vogelgesang@kit.edu>")
+set(CPACK_DEBIAN_PACKAGE_DESCRIPTION ${UCA_DESCRIPTION})
+set(CPACK_DEBIAN_PACKAGE_DESCRIPTION_SUMMARY ${UCA_DESCRIPTION})
+set(CPACK_PACKAGE_VERSION_MAJOR ${UCA_VERSION_MAJOR})
+set(CPACK_PACKAGE_VERSION_MINOR ${UCA_VERSION_MINOR})
+set(CPACK_PACKAGE_VERSION_PATCH ${UCA_VERSION_PATCH})
+set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}-${CMAKE_SYSTEM_PROCESSOR}")
+
+set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
 
 add_subdirectory(src)
 add_subdirectory(doc)
