Sane(r) so version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,12 @@ project(uca C)
 
 set(TARNAME "libuca")
 set(UCA_VERSION_MAJOR "0")
-set(UCA_VERSION_MINOR "4")
+set(UCA_VERSION_MINOR "5")
 set(UCA_VERSION_PATCH "0")
 set(UCA_DESCRIPTION "Unified Camera Access")
 
 set(UCA_VERSION_STRING "${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}")
-set(UCA_API_VERSION "0.1.0")
-set(UCA_ABI_VERSION "0.1.0")
-set(UCA_ABI_MAJOR_VERSION "0")
+set(UCA_ABI_VERSION "${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}")
 
 set(PACKAGE_VERSION "${UCA_VERSION_STRING}")
 set(PACKAGE_NAME "${TARNAME}")
