--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,26 +14,25 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/control.glade ${CMAKE_CURRENT_BINARY_
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/run.py ${CMAKE_CURRENT_BINARY_DIR})
 
 # --- Build targets -----------------------------------------------------------
-add_executable(enum enum.c)
-add_executable(grab grab.c)
-add_executable(grab-async grab-async.c)
-add_executable(benchmark benchmark.c)
+#add_executable(enum enum.c)
+#add_executable(grab-async grab-async.c)
+#add_executable(benchmark benchmark.c)
 
-target_link_libraries(enum uca)
-target_link_libraries(grab uca)
-target_link_libraries(grab-async uca)
-target_link_libraries(benchmark uca)
+#target_link_libraries(enum uca)
+#target_link_libraries(grab uca)
+#target_link_libraries(grab-async uca)
+#target_link_libraries(benchmark uca)
 
-if (GTK2_FOUND)
-    include_directories(${GTK2_INCLUDE_DIRS})
-    add_executable(control control.c)
-    target_link_libraries(control
-        uca
-        ${GTK2_LIBRARIES}
-	    ${GTHREAD2_LIBRARIES}
-        )
-endif()
-
+#if (GTK2_FOUND)
+#    include_directories(${GTK2_INCLUDE_DIRS})
+#    add_executable(control control.c)
+#    target_link_libraries(control
+#        uca
+#        ${GTK2_LIBRARIES}
+#	    ${GTHREAD2_LIBRARIES}
+#        )
+#endif()
+#
 # >>> TEMPORARY TEST EXECUTABLE <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
 
 pkg_check_modules(GLIB2 glib-2.0>=2.24 REQUIRED)
@@ -46,5 +45,8 @@ include_directories(
     )
 
 add_executable(test-gobject test-gobject.c)
-target_link_libraries(test-gobject uca-gobject ${GLIB2_LIBRARIES}
-    ${GOBJECT2_LIBRARIES})
+target_link_libraries(test-gobject 
+    uca-gobject 
+    ${GLIB2_LIBRARIES}
+    ${GOBJECT2_LIBRARIES}
+    )
