Use property notification instead of signal
Up to this point we used a custom signal to notify about starting and stopping
recording of data. However, such signals come (almost) for free for each
property. This way, you can query "is-recording" but also be notified when
"is-recording" was changed by the camera itself.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -51,9 +51,9 @@ target_link_libraries(test-gobject
     ${GOBJECT2_LIBRARIES}
     )
 
-#add_executable(test-mock test-mock.c)
-#target_link_libraries(test-mock
-#    uca-gobject 
-#    ${GLIB2_LIBRARIES}
-#    ${GOBJECT2_LIBRARIES}
-#    )
+add_executable(test-mock test-mock.c)
+target_link_libraries(test-mock
+    uca-gobject 
+    ${GLIB2_LIBRARIES}
+    ${GOBJECT2_LIBRARIES}
+    )
